[gd_scene load_steps=3 format=3 uid="uid://dmrfig2l5w642"]

[ext_resource type="Texture2D" uid="uid://u8cc0w46qmal" path="res://Images/BlackBackground.jpg" id="1_4fdcf"]
[ext_resource type="Script" path="res://main.gd" id="1_wxf4e"]

[node name="Main" type="Node2D"]
script = ExtResource("1_wxf4e")

[node name="StartButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 280.0
offset_right = 743.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="MultiplayerButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 392.0
offset_right = 743.0
offset_bottom = 473.0
theme_override_font_sizes/font_size = 40
text = "Multiplayer
"

[node name="QuitButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 504.0
offset_right = 743.0
offset_bottom = 585.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(4.44788, 3.34021)
texture = ExtResource("1_4fdcf")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 136.0
offset_top = 96.0
offset_right = 1018.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 90
text = "Cube Dodging Game"

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MultiplayerButton" to="." method="_on_multiplayer_button_button_down"]
[connection signal="button_down" from="QuitButton" to="." method="_on_quit_button_button_down"]
